# Brainnett

./: .env  .env.example  .gitignore  .gitmodules  PRP_Blue_GUI.md  README.md  V2_FEATURES.md  brain  brainnet_memory.db  pyproject.toml  repo-backup.bundle  requirements.txt
.cursor/rules/: quant-expert.mdc
brainnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brainnet/agents/: base.py  coding.py  reasoning.py  research.py
brainnet/core/: __init__.py  config.py  knowledge.py  memory.py
brainnet/services/: main.py  market_data.py  tui.py
docling-dltknowlagebase/: CERAMIC_INTEGRATION.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.ceramic.yml
docling-dltknowlagebase/ceramic-service/: .env.example  Dockerfile  README.md  package.json  test.js
docling-dltknowlagebase/ceramic-service/src/: ceramic.ts  config.ts  index.ts  ipfs.ts  server.ts
docling-dltknowlagebase/docling-rag-agent/: .env.example  README.md  check_config.py  cli.py  setup_config.py  setup_database.py  test_ceramic_integration.py  welcome.py
docling-dltknowlagebase/docling-rag-agent/ingestion/: ceramic_client.py  ingest.py
docling-dltknowlagebase/docling-rag-agent/sql/: ceramic_streams.sql
docs/prp/: PRP_ConvNeXt_GAF_Integration.md
examples/: gaf_trading_loop.py
lms/: .gitkeep
lms/minah/: pyproject.toml
lms/minah/examples/: basic_usage.py  custom_agent.py
lms/minah/tests/: test_convnext.py  (+1 more)
models/: .gitkeep
scripts/: brain
shared/: __init__.py
tests/: test_agents.py  test_memory.py
(+11 files in other folders)
